@@ -2,6 +2,8 @@ update-manager (1:0.131) UNRELEASED; urgency=low
 
   * UpdateManager/UpdateManager.py:
     - do not crash if setlocale() fails (LP: #471378)
+  * DistUpgrade/DistUpgradeController.py:
+    - better message for upgrades over ssh (LP: #463257)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 03 Nov 2009 16:05:01 +0100
 
